Updates of product adding

--- a/app/components/app/app.template.html
+++ b/app/components/app/app.template.html
@@ -1,4 +1,7 @@
 <my-header></my-header>
 
 <!-- Routed views go here -->
-<!--<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
+
+
+<my-footer></my-footer>
