--- a/app/css/style.css
+++ b/app/css/style.css
@@ -529,15 +529,17 @@ a.buy-now:hover{
 	margin-right:6px;
 }
 .mid-2 {
-    padding-top: 1em;
+    padding-top: 0.5em;
+    margin-bottom: 0.7em;
 }
 .mid-1 {
     padding-top: 1em;
 }
-.mid-pop{
-	position:relative;
-	border: 1px solid #EFECEC;
+.mid-pop {
+    position: relative;
+    border: 1px solid #EFECEC;
     padding: 10px;
+    margin-bottom: 0.6em;
 }
 .zoom-icon {
 	    position: absolute;
@@ -760,6 +762,7 @@ ul.kid-menu li,ul.cute li{
 }
 .item-grid1 {
     padding-bottom: 2em;
+    margin-bottom: 2em;
 }
 .item-grid1:nth-child(7) ,.item-grid1:nth-child(8),.item-grid1:nth-child(9){
     padding-bottom: 0em;
@@ -1013,9 +1016,32 @@ nav.nav-sidebar {
 .product-at{
 	padding-top:0;
 }
+/* */
+.attribute{
+	border: 1px solid #E9E9E9;
+	margin-bottom: 2em;
+	padding: 0.5em 1em;
+}
+.attribute input[type="text"]{
+	border: none;
+	outline:none;
+	font-size: 0.9em;
+    color: #999;
+    width: 85%;
+}
+.attribute i{
+	color: #F67777;
+    font-size: 1em;
+}
+
+input[type=button]{
+    background-color: transparent;
+    border: none;
+}
+
 /*--login--*/
 .login{
-	padding:5em 0 0;
+	padding:3em 0 0;
 }
 .login-bottom h2{
 	font-size: 1.4em;
@@ -1038,6 +1064,34 @@ nav.nav-sidebar {
     color: #999;
     width: 95%;
 }
+.login-mail textarea{
+	border: none;
+	outline:none;
+	font-size: 0.9em;
+    color: #999;
+    width: 95%;
+    resize: none;
+}
+
+.attributes_nrow{
+    padding-top: 0.8em;
+}
+
+.input-group-addon{
+	border: none;
+	outline:none;
+    background-color: transparent;
+	font-size: 0.9em;
+    color: #999;
+    resize: none;
+    padding-top: 0.28em;
+    min-width: 5.9em;
+}
+
+.login-mail-error {
+    border: 1px solid #f67777;
+}
+
 .login-do input[type="submit"]{
 	border: none;
     outline: none;
@@ -1339,6 +1393,7 @@ a.at-in {
 }
 /*--footer--*/
 .footer-middle{
+    margin-top: 2em;
 	background:#1F1F1F;
 	padding:4em 0;
 }
