--- a/app/components/footer/footer.template.html
+++ b/app/components/footer/footer.template.html
@@ -2,7 +2,7 @@
 	<div class="footer-middle">
 		<div class="container">
 			<div class="col-md-4 footer-middle-in">
-				<a href="index.html"><img src="app/images/log.png" alt=""></a>
+				<a href="index.html"><img src="src/images/log.png" alt=""></a>
 				<p>Suspendisse sed accumsan risus. Curabitur rhoncus, elit vel tincidunt elementum, nunc urna tristique nisi, in interdum
 					libero magna tristique ante. adipiscing varius. Vestibulum dolor lorem.</p>
 			</div>
