--- a/app/components/item/item.template.html
+++ b/app/components/item/item.template.html
@@ -3,7 +3,7 @@
 		<div class="pro-img">
 			<img src="{{item.pictures[0]}}" class="img-responsive" alt="">
 			<div class="zoom-icon">
-				<a (click)="setCurrentProduct()" ><i class="glyphicon glyphicon-menu-right icon"></i></a>
+				<a (click)="redirectToProduct()"><i class="glyphicon glyphicon-menu-right icon"></i></a>
 			</div>
 
 		</div>
@@ -11,10 +11,10 @@
 			<div class="women">
 				<div class="women-top">
 					<span>{{item.style}}</span>
-					<h6><a href="single.html">{{item.name}}</a></h6>
+					<h6><a (click)="redirectToProduct()">{{item.name}}</a></h6>
 				</div>
 				<div class="img item_add">
-					<a href="#"><img src="app/images/ca.png" alt=""></a>
+					<a (click)="redirectToProduct()"><img src="src/images/ca.png" alt=""></a>
 				</div>
 				<div class="clearfix"></div>
 			</div>
