Change gulp file name

--- a/app/components/app/app.template.html
+++ b/app/components/app/app.template.html
@@ -1,7 +1,7 @@
 <my-header></my-header>
 
 <!-- Routed views go here -->
-<router-outlet></router-outlet>
+<router-outlet class="content-size"></router-outlet>
 
 
 <my-footer></my-footer>
