--- a/app/components/header/header.template.html
+++ b/app/components/header/header.template.html
@@ -10,7 +10,7 @@
 		<div class="container">
 			<div class="col-sm-5 col-md-offset-2  header-login">
 				<ul>
-					<li *ngIf="isLoggedIn()"><a routerLink="/">Profile</a></li>
+					<li *ngIf="isLoggedIn()"><a routerLink="/orders">Orders</a></li>
 					<li *ngIf="isLoggedIn() && isSeller()"><a routerLink="/new/product">Sell products</a></li>
 					<li *ngIf="isLoggedIn() && isSeller()"><a routerLink="/my_products">My products</a></li>
 					<li *ngIf="isLoggedIn()"><a routerLink="/" (click)="logout()">Logout</a></li>
@@ -53,7 +53,6 @@
 					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 						<ul class="nav navbar-nav nav_1">
 							<li><a class="color" routerLink="/">Home</a></li>
-							<li><a class="color" routerLink="/orders">Orders</a></li>
 						</ul>
 						<div class="input-group">
 							<div class="input-group-btn">
